tests/negative/test_dot_multi_ind_cn_asgn.orb
fnc main () () {
    sym x:((i32 i32) i32);

    sym (y:(((i32 cn) i32) i32) x);
    = (. y 0 0) 999;
};